--- a/django/Codeninja/core/static/core/styles.css
+++ b/django/Codeninja/core/static/core/styles.css
@@ -123,7 +123,8 @@ span {
 
 .container {
     display: grid;
-    grid-column: 3fr;
+    background-color: #f7ede2;
+    grid-column: 4fr;
     /* display: flex; */
     /* flex-direction: row; */
     /* align-items: center; */
@@ -143,15 +144,15 @@ article {
 }
 
 #pack:hover {
-    background-color: aliceblue;
+    background-color: #e2f7f7;
     box-shadow: 0 0.1vh 0.4vw #39393978;
     border-radius: 2.1vw;
 }
 
-#idem,
+
 #we {
     color: #0404a0;
-    background-color: #f7ede2;
+    background-color: rgb(177, 238, 229), 247, 247;
     font-size: 2vh;
     padding: 2vh 1vw;
 }
