--- a/django/Codeninja/core/templates/core/servicios.html
+++ b/django/Codeninja/core/templates/core/servicios.html
@@ -2,27 +2,19 @@
 {% load static %}
 {% block service %}
 <article class="container" id="servicio">
-    <ul id="pack">
-        <li id="pack2"><strong>Pack Básico</strong></li>
-        <li id="pack2">Sitio web.</li>
-        <li id="pack2">Dos actualizaciones anuales.</li>
-        <li id="pack2">Soporte técnico.</li>
-    </ul>
-</article>
-<article>
-    <ul id="pack">
-        <li id="pack2"><strong>Pack Profesional</strong></li>
-        <li id="pack2">Sitio web alto rendimiento.</li>
-        <li id="pack2">Dos actualizaciones trimestrales.</li>
-        <li id="pack2">Soporte técnico 12Hs.</li>
-    </ul>
-</article>
-<article>
-    <ul id="pack">
-        <li id="pack2"><strong>Pack Avanzado</strong></li>
-        <li id="pack2">Sitio web alto rendimiento.</li>
-        <li id="pack2">Colección de servicios AWS&REG;</li>
-        <li id="pack2">Soporte técnico 24Hs.</li>
-    </ul>
+{% comment %} ==> Vista basada en clase muestra los datos de la tabla Service <== {% endcomment %}
+{% comment %} Validación en el frontend de usuario autenticado {% endcomment %}
+    {% for service in servicios %}
+    {% if user.is_authenticated %}
+        <ul id="pack">
+            <li id="pack2"><strong> {{ service.name }} </strong></li>
+            <li id="pack2"> {{ service.description }} </li>
+            <li id="pack2"> {{ service.package }} </li>
+            <li id="pack2"> {{ service.support }} </li>
+        </ul>
+    {% else %}
+        <p>No tienes permisos para ver esta página</p>
+    {% endif %}
+    {% endfor %}
 </article>
 {% endblock %}
